@@ -1,3 +1,7 @@
+2001-11-26  Werner Koch  <wk@gnupg.org>
+
+	* assuan.h: Added more status codes.
+
 2001-11-25  Werner Koch  <wk@gnupg.org>
 
 	* assuan-handler.c (assuan_register_bye_notify)
